Fix home page broken layout, adjust robot family call to action

--- a/source/assets/stylesheets/components/_html-body.scss
+++ b/source/assets/stylesheets/components/_html-body.scss
@@ -2,8 +2,10 @@ html,
 body {
   padding: 0 !important;
   margin: 0 !important;
-  background-color: $black-darkest;
+  height: 100% !important;
   min-width: map-get($grid-breakpoints, 'minimium') !important;
+  min-height: 100% !important;
+  background-color: $black-darkest;
 
   @include primary-font();
 
