--- a/source/assets/stylesheets/pages/index/_base.scss
+++ b/source/assets/stylesheets/pages/index/_base.scss
@@ -1,13 +1,14 @@
 #index {
   .content-wrapper {
     @include media-breakpoint-up(xs) {
+      display: flex;
+      flex-direction: column;
+      min-height: 100%;
       padding: 0;
       margin: 0;
     }
   }
 
   @import "pages/index/section_call_to_action";
-  @import "pages/index/section_call_process";
-  @import "pages/index/section_call_metrics";
-  @import "pages/index/section_call_values";
+  @import "pages/index/section_venn_wrapper";
 }
